--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,17 +4,21 @@
   }
 
   :root {
-    --background-color: white;
+    --background-color: rgb(253, 253, 253);
     --text-color: rgb(36, 36, 36);
     --text-color-light: rgb(36, 36, 36, 0.6);
     --glass: #00000040;
+    --text-color-light2: rgb(36, 36, 36, 0.05);
+    --glass-overlay: #ffffff40;
   }
 
   [data-theme='dark'] {
-    --background-color: black;
+    --background-color: #020202;
     --text-color: #f5f5f5;
     --text-color-light: rgb(245, 245, 245, 0.6);
     --glass: #f5f5f540;
+    --text-color-light2: rgb(245, 245, 245, 0.025);
+    --glass-overlay: #00000040;
   }
 
   * {
@@ -45,31 +49,19 @@
 
   .grid-lines {
     position: fixed;
-    top: 1rem;
-    left: 1rem;
-    right: 1rem;
-    bottom: 1rem;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     display: grid;
-    gap: 1rem;
+    /* gap: 1rem; */
     grid-template-columns: repeat(12, 1fr);
-    /* grid-template-rows: repeat(2, 450px); */
+    /* grid-template-rows: repeat(4); */
     z-index: -1;
   }
 
   /* .grid-lines div {
-    border: 1px solid rgba(36, 36, 36, 0.05);
-  } */
-
-  /* @keyframes fade {
-    0% {
-      opacity: 0;
-      transform: translateY(50%)
-    }
-
-    100% {
-      opacity: 1;
-      transform: translateY(0%)
-    }
+    border-left: 1px solid var(--text-color-light2);
   } */
 
   button {
@@ -79,8 +71,8 @@
   }
 
   h1 {
-    font-size: clamp(34px, 6vw, 5vw);
-    font-weight: 500;
+    font-size: clamp(38px, 6vw, 6vw);
+    font-weight: 600;
     line-height: 1.2;
   }
 
@@ -99,8 +91,8 @@
   }
 
   span {
-    font-weight: 400;
-    font-size: clamp(18px, 4vw, 20px);
+    font-weight: 600;
+    font-size: clamp(24px, 4vw, 1.5vw);
     line-height: 1.8;
   }
 
@@ -123,12 +115,12 @@
     border-top: 2px solid var(--text-color);
     margin-left: 155px;
     margin-block: 2rem;
-    /* border-radius: 100rem; */
+    border-radius: 2rem;
   }
 
   .button {
-    width: 100%;
-    height: 2.5rem;
+    width: 8rem;
+    height: 8rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -136,13 +128,23 @@
     color: var(--background-color);
     border: 1px solid var(--text-color);
     background: var(--text-color);
-    /* border-radius: 100rem; */
     transition: 300ms ease-out;
+    border-radius: 100rem;
   }
 
   a:hover,
   button:hover {
     opacity: 0.4;
+  }
+
+  .circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 0.75rem;
+    height: 0.75rem;
+    background: var(--text-color);
+    border-radius: 100rem;
   }
 
   nav {
@@ -197,7 +199,7 @@
 
   label {
     font-size: clamp(10px, 2vw, 12px);
-    font-weight: 600;
+    font-weight: 500;
     line-height: 1.6;
   }
 
@@ -208,7 +210,7 @@
     font-weight: 400;
     width: 100%;
     border: 0px;
-    border-bottom: 2px solid transparent;
+    border-bottom: 1px solid transparent;
     background: transparent;
     margin-bottom: 1rem;
     padding: 1rem;
@@ -223,7 +225,7 @@
   input:focus,
   textarea:focus {
     outline: none;
-    border-bottom: 2px solid var(--text-color);
+    border-bottom: 1px solid var(--text-color);
   }
 
   ::placeholder {
@@ -256,10 +258,10 @@
     justify-content: center;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
-    background: #f5f5f540;
+    background: #00000010;
     color: white;
-    /* border-radius: 100rem; */
     transition: 300ms ease-out;
+    border-radius: 100rem;
   }
 
   .container-holder,
@@ -322,7 +324,7 @@
     max-height: 450px;
     transition: 150ms linear;
     width: 100%;
-    /* border-radius: 2rem; */
+    border-radius: 2rem;
   }
 
   .project-btn {
@@ -334,11 +336,11 @@
     align-items: center;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
-    background: #f5f5f540;
+    background: #00000010;
     width: 2.5rem;
     aspect-ratio: 1/1;
     z-index: 4;
-    /* border-radius: 100rem; */
+    border-radius: 100rem;
   }
 
   .img {
@@ -397,13 +399,14 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
+    /* border-left: 1px solid var(--text-color); */
   }
 }
 
 @media (min-width: 799px) {
   .button:hover {
-    opacity: 0.85;
-    transform: translateY(-5px);
+    opacity: 0.6;
+    transform: translateY(-5px) rotate(360deg);
   }
 
   .toggle-btn-holder {
