--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 
   [data-theme='dark'] {
     --background-color: #020202;
-    --text-color: #f5f5f5;
+    --text-color: white;
     --text-color-light: rgb(245, 245, 245, 0.6);
     --glass: #f5f5f540;
     --text-color-light2: rgb(245, 245, 245, 0.025);
@@ -377,7 +377,7 @@
 
   footer {
     width: 85%;
-    padding-top: 12rem;
+    padding-top: 8rem;
     padding-bottom: 8rem;
   }
 
