--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,7 +115,6 @@
     border-top: 2px solid var(--text-color);
     margin-left: 155px;
     margin-block: 2rem;
-    border-radius: 2rem;
   }
 
   .button {
@@ -145,6 +144,17 @@
     height: 0.75rem;
     background: var(--text-color);
     border-radius: 100rem;
+  }
+
+  .nav-slider {
+    position: fixed;
+    display: none;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 0.4rem;
+    top: 8rem;
+    right: 3rem;
+    z-index: 4;
   }
 
   nav {
@@ -258,7 +268,7 @@
     justify-content: center;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
-    background: #00000010;
+    background: #00000020;
     color: white;
     transition: 300ms ease-out;
     border-radius: 100rem;
@@ -324,7 +334,6 @@
     max-height: 450px;
     transition: 150ms linear;
     width: 100%;
-    border-radius: 2rem;
   }
 
   .project-btn {
@@ -336,7 +345,7 @@
     align-items: center;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
-    background: #00000010;
+    background: #00000020;
     width: 2.5rem;
     aspect-ratio: 1/1;
     z-index: 4;
@@ -399,7 +408,6 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
-    /* border-left: 1px solid var(--text-color); */
   }
 }
 
@@ -457,7 +465,10 @@
 }
 
 @media (min-width: 1299px) {
-
+  .nav-slider {
+    display: flex;
+  }
+  
   .container-title,
   .container-splash {
     width: 65%;
