--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,21 +4,25 @@
   }
 
   :root {
-    --background-color: rgb(253, 253, 253);
-    --text-color: rgb(36, 36, 36);
-    --text-color-light: rgb(36, 36, 36, 0.6);
-    --glass: #00000040;
-    --text-color-light2: rgb(36, 36, 36, 0.05);
-    --glass-overlay: #ffffff40;
+    --background-color: #F2F3F4;
+    --text-color: #020202;
+    --text-color-light: rgb(36, 36, 36, 0.65);
+    --glass: #00000020;
+    --text-color-light2: rgb(36, 36, 36, 0.125);
+    --glass-overlay: #ffffff20;
+    --button: white;
+    --toggle: black;
   }
 
   [data-theme='dark'] {
     --background-color: #020202;
-    --text-color: white;
-    --text-color-light: rgb(245, 245, 245, 0.6);
-    --glass: #f5f5f540;
-    --text-color-light2: rgb(245, 245, 245, 0.025);
-    --glass-overlay: #00000040;
+    --text-color: #F2F3F4;
+    --text-color-light: rgb(245, 245, 245, 0.65);
+    --glass: #f5f5f520;
+    --text-color-light2: rgb(245, 245, 245, 0.125);
+    --glass-overlay: #00000020;
+    --button: black;
+    --toggle: white;
   }
 
   * {
@@ -55,14 +59,15 @@
     bottom: 0;
     display: grid;
     /* gap: 1rem; */
-    grid-template-columns: repeat(12, 1fr);
-    /* grid-template-rows: repeat(4); */
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(4);
     z-index: -1;
   }
 
-  /* .grid-lines div {
-    border-left: 1px solid var(--text-color-light2);
-  } */
+  .grid-lines div {
+    border-left: 1px dashed var(--text-color-light2);
+    border-bottom: 1px dashed var(--text-color-light2);
+  }
 
   button {
     all: unset;
@@ -71,12 +76,18 @@
   }
 
   h1 {
-    font-size: clamp(38px, 6vw, 6vw);
+    font-size: clamp(36px, 6vw, 4vw);
     font-weight: 600;
     line-height: 1.2;
   }
 
   h2 {
+    font-size: clamp(36px, 6vw, 4vw);
+    font-weight: 600;
+    line-height: 1.2;
+  }
+
+  h3 {
     line-height: 1.6;
     font-size: clamp(20px, 4vw, 24px);
     font-weight: 300;
@@ -164,14 +175,48 @@
     right: 0rem;
     z-index: 6;
     padding: 1rem;
+
+    .toggle-switch {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 2.5rem;
+      aspect-ratio: 1/1;
+      z-index: 2;
+      border-radius: 100rem;
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      background: var(--glass);
+    }
+  }
+
+  .panel {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1rem;
+
+    button {
+      font-size: clamp(36px, 6vw, 4vw);
+      font-weight: 600;
+      line-height: 1.2;
+      transition: all 0.3s ease-in-out;
+    }
+  }
+
+  .grid-toggle {
+    position: fixed;
+    top: 4.5rem;
+    left: 1rem;
+    z-index: 6;
   }
 
   .toggle {
     position: fixed;
-    bottom: 1rem;
-    right: 0rem;
+    top: 1.5rem;
+    left: 1rem;
     z-index: 6;
-    padding: 1rem;
   }
 
   .slider {
@@ -200,8 +245,8 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: .75rem;
-      height: .5rem;
+      width: 2.5rem;
+      aspect-ratio: 1/1;
       z-index: 2;
       border-radius: 100rem;
     }
@@ -359,19 +404,8 @@
     transition: 500ms ease-out;
   }
 
-  .project:hover {
-    transition: 150ms linear;
-
-    .img {
-      scale: 1.1;
-    }
-
-    .detail {
-      opacity: 1;
-    }
-  }
-
-  .container-splash {
+  .container-splash,
+  .panel {
     text-align: left;
     width: 90%;
     overflow: hidden;
@@ -387,7 +421,7 @@
   footer {
     width: 85%;
     padding-top: 8rem;
-    padding-bottom: 4rem;
+    padding-bottom: 6rem;
   }
 
   .footer {
@@ -407,7 +441,19 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 1rem;
+    gap: 0.4rem;
+
+    a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 2.5rem;
+      aspect-ratio: 1/1;
+      border-radius: 100rem;
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      background: var(--glass);
+    }
   }
 }
 
@@ -440,9 +486,18 @@
     right: 2rem;
   }
 
+  .grid-toggle {
+    bottom: 5rem;
+    right: 3rem;
+    left: auto;
+    top: auto;
+  }
+
   .toggle {
     bottom: 2rem;
-    right: 2rem;
+    right: 3rem;
+    left: auto;
+    top: auto;
   }
 
   .project-holder {
@@ -451,6 +506,18 @@
 
   .project {
     max-width: 615px;
+  }
+
+  .project:hover {
+    transition: 150ms linear;
+
+    .img {
+      scale: 1.1;
+    }
+
+    .detail {
+      opacity: 1;
+    }
   }
 
   .project-title {
@@ -468,9 +535,10 @@
   .nav-slider {
     display: flex;
   }
-  
+
   .container-title,
-  .container-splash {
+  .container-splash,
+  .panel {
     width: 65%;
   }
 
