--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,7 +60,7 @@
     display: grid;
     /* gap: 1rem; */
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(4);
+    grid-template-rows: repeat(2);
     z-index: -1;
   }
 
@@ -186,6 +186,11 @@
       backdrop-filter: blur(8px);
       -webkit-backdrop-filter: blur(8px);
       background: var(--glass);
+      transition: 150ms linear;
+    }
+
+    .toggle-switch:hover {
+      opacity: 0.6;
     }
   }
 
@@ -234,11 +239,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    background: var(--glass);
-    border-radius: 100rem;
-    padding-block: 0;
 
     .toggle-switch {
       display: flex;
@@ -248,6 +248,14 @@
       aspect-ratio: 1/1;
       z-index: 2;
       border-radius: 100rem;
+      transition: 150ms linear;
+      backdrop-filter: blur(8px);
+      -webkit-backdrop-filter: blur(8px);
+      background: var(--glass);
+    }
+
+    .toggle-switch:hover {
+      opacity: 0.6;
     }
   }
 
@@ -353,7 +361,7 @@
   }
 
   .project-holder {
-    gap: 1rem;
+    gap: 0.4rem;
     align-items: flex-start;
     text-align: left;
     justify-content: center;
@@ -378,6 +386,7 @@
     max-height: 450px;
     transition: 150ms linear;
     width: 100%;
+    border-radius: 0rem;
   }
 
   .project-btn {
@@ -419,8 +428,8 @@
 
   footer {
     width: 85%;
-    padding-top: 8rem;
-    padding-bottom: 6rem;
+    padding-top: 12rem;
+    padding-bottom: 2rem;
   }
 
   .footer {
@@ -433,7 +442,7 @@
 
   .footerLinksHolder {
     display: flex;
-    gap: 4rem;
+    gap: 1rem;
   }
 
   .footerLinks {
