--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
   }
 
   :root {
-    --background-color: #F2F3F4;
+    --background-color: white;
     --text-color: #020202;
     --text-color-light: rgb(36, 36, 36, 0.65);
     --glass: #00000020;
@@ -15,7 +15,7 @@
   }
 
   [data-theme='dark'] {
-    --background-color: #020202;
+    --background-color: black;
     --text-color: #F2F3F4;
     --text-color-light: rgb(245, 245, 245, 0.65);
     --glass: #f5f5f520;
