--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
     --text-color: #F2F3F4;
     --text-color-light: rgb(245, 245, 245, 0.65);
     --glass: #f5f5f520;
-    --text-color-light2: rgb(245, 245, 245, 0.125);
+    --text-color-light2: rgb(245, 245, 245, 0.1);
     --glass-overlay: #00000080;
     --button: black;
     --toggle: white;
@@ -19,7 +19,7 @@
     --text-color: #020202;
     --text-color-light: rgb(36, 36, 36, 0.65);
     --glass: #00000020;
-    --text-color-light2: rgb(36, 36, 36, 0.125);
+    --text-color-light2: rgb(36, 36, 36, 0.1);
     --glass-overlay: #ffffff80;
     --button: white;
     --toggle: black;
@@ -58,14 +58,12 @@
     right: 0;
     bottom: 0;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(2);
+    grid-template-columns: repeat(12, 1fr);
     z-index: -1;
   }
 
   .grid-lines div {
     border-left: 1px dashed var(--text-color-light2);
-    border-bottom: 1px dashed var(--text-color-light2);
   }
 
   button {
@@ -104,10 +102,16 @@
   }
 
   .link {
-    all: unset;
+    /* all: unset; */
     cursor: pointer;
     color: var(--text-color);
     transition: 150ms linear;
+
+    .circle {
+      opacity: 0;
+      scale: 0;
+      transition: 150ms linear;
+    }
   }
 
   span,
@@ -115,6 +119,15 @@
     font-weight: 300;
     font-size: clamp(16px, 4vw, 1vw);
     line-height: 1.4;
+  }
+
+  .link:hover {
+    transform: translateX(10px);
+
+    .circle {
+      opacity: 1;
+      scale: 1;
+    }
   }
 
   a,
@@ -151,16 +164,6 @@
     opacity: 0.4;
   }
 
-  .circle {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 0.75rem;
-    height: 0.75rem;
-    background: var(--text-color);
-    border-radius: 100rem;
-  }
-
   nav {
     display: flex;
     justify-content: center;
@@ -170,12 +173,6 @@
     right: 5%;
     transition: all 0.3s ease-in-out;
     gap: 0.4rem;
-    /* border-radius: 100rem;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    background: var(--glass);
-    padding: 0.4rem;
-    padding-block: 0; */
   }
 
   .logo {
@@ -191,7 +188,8 @@
     align-items: flex-start;
     gap: 1rem;
 
-    button {
+    button,
+    a {
       font-size: clamp(36px, 6vw, 4vw);
       font-weight: 200;
       line-height: 1.2;
@@ -303,6 +301,17 @@
     position: relative;
   }
 
+  .about-holder {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: flex-end;
+    margin-top: 12rem;
+  }
+
   .panel-holder {
     position: fixed;
     left: 0;
@@ -326,8 +335,9 @@
 
   .project-title {
     position: absolute;
-    left: 1rem;
-    bottom: 1rem;
+    left: 0rem;
+    bottom: 0rem;
+    padding: 1rem;
     z-index: 4;
     opacity: 0;
     transition: 300ms ease-out;
@@ -375,7 +385,7 @@
     top: 0;
     bottom: 0;
     right: 0;
-    background: #00000060;
+    background: #00000080;
     z-index: 4;
     opacity: 0;
     transition: 300ms ease-out;
@@ -427,12 +437,6 @@
     align-items: center;
     width: fit-content;
     gap: 0.4rem;
-    /* border-radius: 100rem;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    background: var(--glass);
-    padding: 0.4rem;
-    padding-block: 0; */
 
     a {
       display: flex;
@@ -481,7 +485,7 @@
     transition: 150ms linear;
 
     .img {
-      scale: 1.1;
+      scale: 1.05;
     }
 
     .project-title {
@@ -494,13 +498,18 @@
   }
 
   .project-title {
-    left: 4rem;
-    bottom: 4rem;
+    padding: 2rem;
   }
 
   .project-btn {
     right: 2rem;
     top: 2rem;
+  }
+}
+
+@media (min-width: 1213px) {
+  .about-holder {
+    margin-top: 0rem;
   }
 }
 
@@ -510,5 +519,17 @@
   .container-splash,
   .panel {
     width: 65%;
+  }
+}
+
+@media (min-width: 1300px) {
+  .about-holder {
+    margin-top: 12rem;
+  }
+}
+
+@media (min-width: 1679px) {
+  .about-holder {
+    margin-top: 0rem;
   }
 }
