--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,7 @@
     transition: background-color 0.3s, color 0.3s;
   }
 
-  .grid-lines {
+  /* .grid-lines {
     position: fixed;
     top: 0;
     left: 0;
@@ -66,7 +66,7 @@
 
   .grid-lines div {
     border-left: 1px dashed var(--text-color-light2);
-  }
+  } */
 
   button {
     all: unset;
@@ -83,7 +83,7 @@
   h2 {
     font-size: clamp(18px, 4vw, 1.5vw);
     font-weight: 200;
-    line-height: 1.4;
+    line-height: 1.6;
   }
 
   h3 {
@@ -189,6 +189,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
+    padding-bottom: 5%;
 
     button,
     a {
@@ -315,6 +316,7 @@
   }
 
   .panel-holder {
+    align-items: flex-end;
     position: fixed;
     left: 0;
     top: 0;
@@ -322,7 +324,6 @@
     background: var(--glass-overlay);
     backdrop-filter: blur(20px) saturate(120%);
     -webkit-backdrop-filter: blur(20px) saturate(120%);
-    align-items: center;
     visibility: hidden;
     z-index: 5;
   }
@@ -338,14 +339,14 @@
   .project-title {
     position: absolute;
     left: 0rem;
-    top: 0rem;
+    /* top: 0rem; */
     bottom: 0rem;
     padding: 1rem;
     z-index: 4;
     opacity: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     transition: 300ms ease-out;
   }
 
@@ -392,6 +393,8 @@
     bottom: 0;
     right: 0;
     background: #00000080;
+    backdrop-filter: blur(8px) saturate(120%);
+    -webkit-backdrop-filter: blur(8px) saturate(120%);
     z-index: 4;
     opacity: 0;
     transition: 300ms ease-out;
@@ -508,8 +511,8 @@
   }
 
   .project-btn {
-    right: 4rem;
-    top: 4rem;
+    right: 2rem;
+    top: 2rem;
   }
 }
 
@@ -521,11 +524,11 @@
 
 @media (min-width: 1299px) {
 
-  .container-title,
+  /* .container-title,
   .container-splash,
   .panel {
     width: 65%;
-  }
+  } */
 }
 
 @media (min-width: 1300px) {
