--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,6 +68,14 @@
     border-left: 1px dashed var(--text-color-light2);
   } */
 
+  /* .grid {
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 100vh);
+    gap: 0.4rem;
+  } */
+
   button {
     all: unset;
     cursor: pointer;
@@ -135,8 +143,8 @@
   a,
   button {
     color: var(--text-color);
-    font-size: clamp(12px, 2vw, 14px);
-    font-weight: 400;
+    font-size: clamp(16px, 4vw, 1vw);
+    font-weight: 200;
     line-height: 1.4;
     text-decoration: none;
     width: fit-content;
@@ -167,7 +175,7 @@
   }
 
   nav {
-    display: flex;
+    display: flex; 
     justify-content: center;
     z-index: 6;
     position: fixed;
@@ -175,6 +183,19 @@
     right: 5%;
     transition: all 0.3s ease-in-out;
     gap: 0.4rem;
+  }
+
+  .nav-slider {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.4rem;
+    top: 4rem;
+    left: 5%;
+    z-index: 4;
+    transition: all 0.3s ease-in-out;
   }
 
   .logo {
@@ -409,7 +430,7 @@
 
   .container-splash {
     opacity: 0;
-    margin-bottom: 8rem;
+    margin-bottom: 4rem;
   }
 
   .container-title {
