--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,9 +13,10 @@
     --button: black;
     --toggle: white;
     --text-color-project: rgb(245, 245, 245, 0.65);
+    --video: 0;
   }
 
-  [data-theme='light'] {
+  /* [data-theme='light'] {
     --background-color: white;
     --text-color: #020202;
     --text-color-light: rgb(36, 36, 36, 0.65);
@@ -25,7 +26,8 @@
     --button: white;
     --toggle: black;
     --text-color-project: rgb(245, 245, 245, 0.65);
-  }
+    --video: 1;
+  } */
 
   * {
     padding: 0px;
@@ -143,7 +145,7 @@
   button {
     color: var(--text-color);
     font-size: clamp(16px, 4vw, 0.7vw);
-    font-weight: 200;
+    font-weight: 300;
     line-height: 1.4;
     text-decoration: none;
     width: fit-content;
@@ -237,6 +239,14 @@
 
   .toggle-switch:hover {
     opacity: 0.6;
+  }
+
+  .topics {
+    width: 100%;
+    justify-content: left;
+    display: flex;
+    gap: 4rem;
+    margin-block: 1rem;
   }
 
   .detail {
@@ -341,6 +351,17 @@
     border-radius: 100rem;
   }
 
+  .video {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    mask-image: linear-gradient(to bottom, black, transparent);
+    filter: invert(var(--video));
+  }
+
   .img {
     width: 100%;
     max-height: 750px;
@@ -354,6 +375,21 @@
     height: 85vh;
     object-fit: cover;
     object-position: center top;
+  }
+
+  #fade {
+    opacity: 0;
+    animation: fadeIn 2s ease-in forwards;
+  }
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 0.65;
+    }
   }
 
   .overlay {
@@ -391,6 +427,10 @@
   .button:hover {
     opacity: 0.6;
     /* transform: translateY(-5px) rotate(360deg); */
+  }
+
+  .topics {
+    justify-content: right;
   }
 }
 
@@ -453,5 +493,9 @@
 
   .side-img {
     width: 50%;
+  }
+
+  .video {
+    position: fixed;
   }
 }
