--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,7 +113,8 @@
     color: var(--text-color-light);
   }
 
-  .link {
+  .link,
+  .link-large {
     cursor: pointer;
     color: var(--text-color);
     transition: 150ms linear;
@@ -126,7 +127,8 @@
   }
 
   span,
-  .link {
+  .link,
+    .link-large {
     font-weight: 300;
     font-size: clamp(16px, 4vw, 1vw);
     line-height: 1.4;
@@ -134,6 +136,15 @@
 
   .link:hover {
     transform: translateX(10px);
+
+    .circle {
+      opacity: 1;
+      scale: 1;
+    }
+  }
+
+  .link-large:hover {
+    transform: translateX(-10px);
 
     .circle {
       opacity: 1;
@@ -278,17 +289,6 @@
     position: relative;
   }
 
-  .about-holder {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    flex-direction: column;
-    min-height: 100vh;
-    justify-content: flex-end;
-    margin-top: 12rem;
-  }
-
   .panel-holder {
     align-items: flex-end;
     position: fixed;
@@ -313,12 +313,16 @@
   .project-title {
     position: absolute;
     left: 0rem;
+    right: 0rem;
     bottom: 0rem;
     padding: 1rem;
     z-index: 4;
-    opacity: 0;
+    opacity: 1;
     display: flex;
     flex-direction: column;
+    /* background: #00000060;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px); */
     transition: 300ms ease-out;
   }
 
@@ -332,7 +336,7 @@
     max-width: auto;
     transition: 150ms linear;
     width: 100%;
-    border-radius: 0rem;
+    /* border-radius: 40px; */
   }
 
   .project-btn {
@@ -399,12 +403,10 @@
     top: 0;
     bottom: 0;
     right: 0;
-    background: #00000080;
-    backdrop-filter: blur(8px) saturate(120%);
-    -webkit-backdrop-filter: blur(8px) saturate(120%);
+    background: #00000060;
     z-index: 4;
-    opacity: 0;
-    transition: 300ms ease-out;
+    opacity: 1;
+    transition: 500ms ease-out;
   }
 
   .container-splash,
@@ -449,15 +451,15 @@
     transition: 150ms linear;
 
     .img {
-      scale: 1.05;
+      scale: 1.075;
     }
 
     .project-title {
-      opacity: 1;
+      opacity: 0;
     }
 
     .overlay {
-      opacity: 1;
+      opacity: 0;
     }
   }
 
@@ -475,23 +477,7 @@
   }
 }
 
-@media (min-width: 1213px) {
-  .about-holder {
-    margin-top: 0rem;
-  }
-}
-
-@media (min-width: 1300px) {
-  .about-holder {
-    margin-top: 12rem;
-  }
-}
-
 @media (min-width: 1679px) {
-  .about-holder {
-    margin-top: 0rem;
-  }
-
   .side-img {
     width: 50%;
   }
