--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,7 +45,7 @@
   body,
   main {
     width: 100%;
-    min-height: 100vh;
+    min-height: 100dvh;
     position: relative;
   }
 
@@ -74,7 +74,7 @@
     width: 90%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(2, 100vh);
+    grid-template-rows: repeat(2, 100dvh);
     gap: 0.4rem;
   } */
 
@@ -364,7 +364,7 @@
 
   .video {
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     object-fit: cover;
     position: absolute;
     z-index: -1;
@@ -384,7 +384,7 @@
   .side-img {
     opacity: 0;
     width: 100%;
-    height: 85vh;
+    height: 85dvh;
     object-fit: cover;
     object-position: center top;
   }
@@ -412,7 +412,7 @@
     right: 0;
     background: #00000060;
     z-index: 4;
-    opacity: 1;
+    opacity: 0;
     transition: 500ms ease-out;
   }
 
@@ -454,16 +454,9 @@
       display: flex;
     }
   }
-}
 
-@media (min-width: 999px) {
-  .project-holder {
-    width: 100%;
-  }
-
-  .project {
-    max-width: 615px;
-    max-width: 45%;
+  .overlay {
+    opacity: 1;
   }
 
   .project:hover {
@@ -480,6 +473,17 @@
     .overlay {
       opacity: 0;
     }
+  }
+}
+
+@media (min-width: 999px) {
+  .project-holder {
+    width: 100%;
+  }
+
+  .project {
+    max-width: 615px;
+    max-width: 45%;
   }
 
   .project-btn {
