--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -314,7 +314,7 @@
 
   .video {
     width: 100%;
-    height: 100dvh;
+    height: 100vh;
     object-fit: cover;
     position: absolute;
     z-index: -1;
@@ -334,7 +334,7 @@
   .side-img {
     opacity: 0;
     width: 100%;
-    height: 85dvh;
+    height: 85vh;
     object-fit: cover;
     object-position: center top;
   }
