--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -294,6 +294,7 @@
     max-width: auto;
     transition: 150ms linear;
     width: 100%;
+    border-radius: 12px;
   }
 
   .project-btn {
@@ -326,7 +327,7 @@
 
   .img {
     width: 100%;
-    max-height: 750px;
+    max-height: 450px;
     object-fit: cover;
     transition: .75s cubic-bezier(.165, .84, .44, 1);
   }
@@ -427,5 +428,9 @@
 
   .video {
     position: fixed;
+  }
+
+  .img {
+    max-height: 750px;
   }
 }
